syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/1939323749/clipboard_server/proto";

service ClipboardService {
  rpc CreateClipboards (CreateClipboardsRequest) returns (CreateClipboardsResponse) {}
  rpc GetClipboards (GetClipboardsRequest) returns (GetClipboardsResponse) {}
  rpc SubscribeClipboard (SubscribeClipboardRequest) returns (stream ClipboardMessage) {}
  rpc DeleteClipboards (DeleteClipboardsRequest) returns (DeleteClipboardsResponse) {}
  rpc StreamMessage (stream StreamMsg) returns (stream StreamMsg) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
}

message CreateClipboardsRequest {
  repeated string values = 1;
  string device_id = 2;
}

message CreateClipboardsResponse {
  repeated string ids = 1;
}

message GetClipboardsRequest {
  repeated string ids = 1;
  repeated google.protobuf.FieldMask mask = 2;
}

message GetClipboardsResponse {
  repeated ClipboardItem clipboards = 1;
}

message DeleteClipboardsRequest {
  repeated string ids = 1;
  string device_id = 2;
}

message DeleteClipboardsResponse {
  bool success = 1;
}

message SubscribeClipboardRequest {}

message ClipboardMessage {
  repeated ClipboardItem items= 1;
  string operation = 2;
}

message ClipboardItem {
  string id = 1;
  string content = 2;
  string device_id = 3;
}

message UpdateRequest {
  string id = 1;
  string new_content = 2;
  string device_id = 3;
}

message UpdateResponse {
  bool success = 1;
}

message StreamMsg{
  string msg = 1;
  google.protobuf.Timestamp timestamp = 2;
}